# kafka-agentic-platform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  alembic.ini  pyproject.toml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
agents/: base.py
agents/evidence_consolidator/: SKILL.md  agent.py
agents/intake/: SKILL.md  agent.py
agents/k8s_gcp_sre/: SKILL.md  agent.py
agents/kafka_strimzi_expert/: SKILL.md  agent.py
agents/pipeline/: durable_queue.py  orchestrator.py  worker.py
agents/post_mortem_analyst/: SKILL.md  agent.py
agents/prom_alerts_triage/: SKILL.md  agent.py
api/: deps.py  main.py  schemas.py  sse.py
api/routes/: admin.py  audits.py  filter_rules.py  infrastructure.py  kb.py  metrics.py  missions.py  triggers.py
core/: audit.py  autonomy.py  db.py  embeddings.py  filter_engine.py  gcp.py  jira_formatter.py  kb_writer.py  langfuse_plugin.py  mem0_bridge.py  mission.py  mission_isolation.py  models.py  plugin_base.py  plugins.py  rag_ingest.py  tenant.py  tool_param_injector.py
deploy/: Dockerfile.backend  Dockerfile.postgres  docker-compose.yml  entrypoint.sh  prometheus.yml  registries.yaml
deploy/lab/: README.md  kafka-filler.sh  kafka-kraft-lab.yaml  provisioner.sh
docs/adr/: 0005-language-policy.md  0009-rag-semantic-search.md  ADR-011-mission-queue.md
docs/architecture/: ADK_PLUGIN_MIGRATION.html  GKE_AUTH_GUIDE.html
docs/pedagogy/: index.html
evals/: promptfoo.yaml  run_evals.sh
evals/cases/: consolidator_lag_conflict.yaml  consolidator_no_secrets_in_output.yaml  consolidator_partial_agents.yaml  consolidator_promrule_false_positive.yaml  consolidator_pvc_consensus.yaml  (+13 more)
migrations/: env.py
scripts/: fix_dev_kc.py  reindex_all.py
tenants/: carrefour.yaml  enterprise.yaml  import_local_kubeconfig.py  import_real_kubeconfigs.py  migrate_to_db.py
tests/: conftest.py
triggers/: alertmanager_poller.py  alertmanager_webhook.py  jira_mcp_poller.py
web/: .npmrc  Dockerfile  marcel-dummy.d.ts  marcel.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+136 files in other folders)
