[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "triggers", "api"]

[project]
name = "kafka-agentic-platform"
version = "0.1.0"
description = "OS agentic web — incident auto-triage for Kafka/Strimzi InfraOps teams"
requires-python = ">=3.11,<3.15"
dependencies = [
    "kafka-agent-toolkit>=0.1.0",
    "google-adk>=2.0,<3",
    "litellm>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "tenacity>=8.3.0",
    "pybreaker>=1.2.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "langfuse>=2.0.0,<3.0.0",
    "watchfiles>=0.22.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "click>=8.1.7",
    "psycopg2-binary>=2.9.12",
    # RAG dependencies
    "pgvector>=0.2.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.3.0", # NOTE: For CPU-only builds, install with --find-links https://download.pytorch.org/whl/cpu
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "carrefour"
url = "https://enterpriserepo.fr.carrefour.com/artifactory/api/pypi/phenix-pypi-snapshots-local"

[tool.uv.sources]
kafka-agent-toolkit = { index = "carrefour" }
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501", "I001", "UP", "F401", "F841", "E402", "N818", "E741", "E701", "F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
